# CAM-F-Continuity-Anomaly-Monitoring-Framework

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.py  start.py
CAMF/: detector_cli.py  launcher.py
CAMF/common/: config.py  ensure_db_path.py  errors.py  models.py  protocol.py  resolution_utils.py  service_discovery.py  utils.py
CAMF/common/ipc/: __init__.py  base.py  compat.py  patterns.py  registry.py  transport.py
CAMF/detectors/: registry.json
CAMF/detectors/TestErrorDetector/: detector.json  detector.py  requirements.txt
CAMF/frontend/: .env.example  README.md  index.css  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
CAMF/frontend/src/: App.jsx  config.js  index.css  main.jsx
CAMF/frontend/src-tauri/: Cargo.toml  tauri.conf.json
CAMF/services/api_gateway/: __init__.py  error_recovery.py  main.py  protocol_middleware.py  sse_handler.py  sse_integration.py
CAMF/services/capture/: __init__.py  camera.py  camera_manager.py  main.py  screen.py  source.py  upload.py  window.py  window_cross_platform.py
CAMF/services/detector_framework/: __init__.py  batch_processor.py  batch_progress.py  benchmarking.py  cli.py  deduplication.py  detector_validator.py  detector_wrapper.py  docker_detector_base.py  docker_installer.py  docker_manager.py  (+11 more)
deployment/: deploy.py  plot.py
deployment/pyinstaller/: build_exe.py
deployment/scripts/: package_release.py  setup_environment.py
deployment/tauri/: tauri.conf.json
report/latex/: .latexmkrc  main.lof  main.out  main.tex  main.toc  vancouver.bst
report/template/: main.tex
tests/: README.md  mock_services.py  pafr_calculator.py  requirements-test.txt  run_all_tests.py  run_all_working_tests.py  setup_test_environment.py  test_api_gateway_crud.py  test_api_gateway_middleware.py  test_api_gateway_sse.py  test_basic_functionality.py  test_capture_camera.py  test_capture_screen_window.py  test_capture_video_upload.py  test_common_ipc.py  test_common_modules.py  test_common_utils.py  test_detector_framework_docker.py  test_detector_framework_processing.py  test_detector_framework_recovery.py  test_detector_progress.py  test_export_service.py  test_integration_workflows.py  test_intelligent_queue.py  test_models.py  test_pafr_calculator.py  test_performance.py  test_priority_queue_simple.py  test_queue_performance.py  test_queue_standalone.py  test_queue_visualization.py  test_sandbox_escape_tests.py  test_security.py  test_storage_database.py  test_storage_frame_operations.py  test_utils_actual.py
(+164 files in other folders)
